feature tests created and configurations improves